img create 구현 완료

--- a/motion/index.html
+++ b/motion/index.html
@@ -57,7 +57,7 @@
           <button id="task" class="menu_btn">TASK</button>
         </div>
       </header>
-      <main></main>
+      <main id="main"></main>
       <footer>Made by JunHoBaek</footer>
     </main>
   </body>
